# minikv

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  experience.txt  pyproject.toml
deploy/: minikv-master.env.example  minikv-master.service  minikv-volume@.service  nginx-volume.conf.example
include/: base64.hpp  cli.hpp  hash.hpp  http.hpp  index.hpp  placement.hpp  rebalance.hpp  rebuild.hpp  record.hpp  server.hpp  volume_client.hpp
src/: base64.cpp  cli.cpp  hash.cpp  http.cpp  index.cpp  main.cpp  placement.cpp  rebalance.cpp  rebuild.cpp  record.cpp  server.cpp  volume_client.cpp
tests/: CMakeLists.txt  base64_test.cpp  cli_test.cpp  ensure_python_test_env.sh  hash_test.cpp  http_dependency_test.cpp  http_test_util.hpp  index_test.cpp  nginx_smoke_test.sh  placement_test.cpp  rebalance_test.cpp  rebuild_test.cpp  record_test.cpp  s3_compat_test.py  s3_compat_test.sh  server_test.cpp  upstream_compat_test.py  upstream_compat_test.sh  volume_client_test.cpp
tools/: thrasher.go
